--- a/platforms/common/scss/admin/_modal.scss
+++ b/platforms/common/scss/admin/_modal.scss
@@ -79,7 +79,7 @@ body.g5-dialog-open, html.g5-dialog-open {
         position: relative;
         margin: 0 auto;
         max-width: 100%;
-        width: 450px;
+        width: 500px;
         font-size: 1rem;
         line-height: 1.5;
         h1, h2, h3, h4, h5, h6, p, ul, li {
